# funky-fresh

./: MANIFEST.in  README.md  setup.cfg
Funkyfresh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
funkyfresh/: __init__.py  base.py  colors.py  core.py  general.py  miscellaneous.py  named_styles.py  styles.py
funkyfresh/anc/: make_example_plots.py  template.mplstyle
funkyfresh/anc/latex_preambles/: charter_preamble.tex  common_preamble.tex  computermodern_preamble.tex  helvetica_preamble.tex  stixtwo_preamble.tex  timesnewroman_preamble.tex
funkyfresh/style_sheets/: AAS.mplstyle  AGU.mplstyle  caltech_thesis.mplstyle  latex_10pt.mplstyle  latex_11pt.mplstyle  latex_12pt.mplstyle  personal_whitepaper.mplstyle
