[metadata]
name = Funkyfresh
version = 2.3.1
author = Zachariah Milby
description = A simple package which sets Matplotlib styles to match select scientific journals.
home_page = https://github.com/zachariahmilby/science-journal-graphics-styles

[options]
include_package_data = True
python_requires >= 3.9
packages = find:
install_requires =
   matplotlib>=3.5.0
   pytest>=7.1.2
   ipython>=8.12.0

[options.extras_require]
test =
   pytest
