[metadata]
name = FunkyFresh
version = 4.1.0
author = Zachariah Milby
description = A simple package with functions to set Matplotlib styles to match select scientific journals.
home_page = https://github.com/zachariahmilby/funky-fresh

[options]
include_package_data = True
python_requires >= 3.9
packages = find:
install_requires =
   matplotlib>=3.9.0
   numpy>=1.24.0
